--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -83,6 +83,20 @@
                       </a>
                   </li>
 
+                  ///added
+                  <li class="sub-menu">
+                      <a href="javascript:;" class="">
+                          <i class="icon_document_alt"></i>
+                          <span>Forms</span>
+                          <span class="menu-arrow arrow_carrot-right"></span>
+                      </a>
+                      <ul class="sub">
+                          <li><a class="" href="form_component.html">Form Elements</a></li>
+                          <li><a class="" href="form_validation.html">Form Validation</a></li>
+                      </ul>
+                  </li>
+                  ///
+
 				  <li>
                       <a class="" href="reservesHome.html">
                           <i class="icon_genius"></i>
