--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -87,12 +87,13 @@
                   <li class="sub-menu">
                       <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
-                          <span>Forms</span>
+                          <span>Financial</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="form_component.html">Form Elements</a></li>
-                          <li><a class="" href="form_validation.html">Form Validation</a></li>
+                          <li><a class="" href="{%  url 'financial' 10 'charge'%}">Charges</a></li>
+                          <li><a class="" href="{%  url 'financial' 10 'bill' %}">Bills</a></li>
+                          <li><a class="" href="{%  url 'financial' 10 'tenant'%}">Tenant</a></li>
                       </ul>
                   </li>
                   ///
