--- a/polls/templates/polls/financial.html
+++ b/polls/templates/polls/financial.html
@@ -317,76 +317,55 @@
           <div id="sidebar"  class="nav-collapse ">
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
-                  <li class="">
+                  <li class="active">
                       <a class="" href="index.html">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
                   </li>
-				  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_document_alt"></i>
-                          <span>Forms</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="form_component.html">Form Elements</a></li>
-                          <li><a class="" href="form_validation.html">Form Validation</a></li>
-                      </ul>
-                  </li>
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_desktop"></i>
-                          <span>UI Fitures</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
-                      </a>
-                      <ul class="sub">
-                          <li><a class="" href="general.html">Components</a></li>
-                          <li><a class="" href="buttons.html">Buttons</a></li>
-                          <li><a class="" href="grids.html">Grids</a></li>
-                      </ul>
-                  </li>
-                  <li>
+
+				  <li>
                       <a class="" href="widgets.html">
                           <i class="icon_genius"></i>
-                          <span>Widgets</span>
+                          <span>Financial</span>
                       </a>
                   </li>
-                  <li>
-                      <a class="" href="chart-chartjs.html">
-                          <i class="icon_piechart"></i>
-                          <span>Charts</span>
 
-                      </a>
-
-                  </li>
-
+                  ///added
                   <li class="sub-menu">
                       <a href="javascript:;" class="">
-                          <i class="icon_table"></i>
-                          <span>Tables</span>
+                          <i class="icon_document_alt"></i>
+                          <span>Financial</span>
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="active" href="basic_table.html">Basic Table</a></li>
+                          <li><a class="" href="{%  url 'financial' 10 'charge' %}">Charges</a></li>
+                          <li><a class="" href="{%  url 'financial' 10 'bill' %}">Bills</a></li>
+                          <li><a class="" href="{%  url 'financial' 10 'tenant' %}">Tenant</a></li>
                       </ul>
+                  </li>
+                  ///
+
+				  <li>
+                      <a class="" href="reservesHome.html">
+                          <i class="icon_genius"></i>
+                          <span>Reservations</span>
+                      </a>
                   </li>
 
-                  <li class="sub-menu">
-                      <a href="javascript:;" class="">
-                          <i class="icon_documents_alt"></i>
-                          <span>Pages</span>
-                          <span class="menu-arrow arrow_carrot-right"></span>
+				  <li>
+                      <a class="" href="widgets.html">
+                          <i class="icon_genius"></i>
+                          <span>Exit</span>
                       </a>
-                      <ul class="sub">
-                          <li><a class="" href="profile.html">Profile</a></li>
-                          <li><a class="" href="login.html"><span>Login Page</span></a></li>
-                          <li><a class="" href="blank.html">Blank Page</a></li>
-                          <li><a class="" href="404.html">404 Error</a></li>
-                      </ul>
                   </li>
+
+
 
               </ul>
+              <!-- sidebar menu end-->
+          </div>
+      </aside>
               <!-- sidebar menu end-->
           </div>
       </aside>
@@ -405,7 +384,7 @@
 				</div>
 			</div>
               <!-- page start-->
-           
+
               <div class="row">
                   <div class="col-lg-12">
                       <section class="panel">
@@ -416,7 +395,7 @@
                           <table class="table table-striped table-advance table-hover">
                            <tbody>
                               <tr>
-                                 <th><i class="icon_profile"></i> Full Name</th>
+                                 <th><i class="icon_profile"></i> <% if %> Full Name </th>
                                  <th><i class="icon_calendar"></i> Date</th>
                                  <th><i class="icon_mail_alt"></i> Email</th>
                                  <th><i class="icon_pin_alt"></i> City</th>
@@ -586,13 +565,21 @@
   </section>
   <!-- container section end -->
     <!-- javascripts -->
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- nicescroll -->
-    <script src="js/jquery.scrollTo.min.js"></script>
-    <script src="js/jquery.nicescroll.js" type="text/javascript"></script>
+    {% load static %}
+    <script src="{% static "polls/js/jquery.js"  %}"></script>
+    {% load static %}
+    <script src="{% static "polls/js/bootstrap.min.js"  %}"></script>
+    <!-- nice scroll -->
+    {% load static %}
+    <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
+    {% load static %}
+    <script src="{% static "polls/js/jquery.nicescroll.js" type="text/javascript" %}"></script>
+    <!-- jquery knob -->
+    {% load static %}
+    <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
     <!--custome script for all page-->
-    <script src="js/scripts.js"></script>
+    {% load static %}
+    <script src="{% static "polls/js/scripts.js" %}"></script>
 
 
   </body>
