--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -99,7 +99,7 @@
                   ///
 
 				  <li>
-                      <a class="" href="reservesHome.html">
+                      <a class="" href="{%  url 'reservation' 10 0%}">
                           <i class="icon_genius"></i>
                           <span>Reservations</span>
                       </a>
@@ -334,7 +334,7 @@
     {% load static %}
     <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
     {% load static %}
-    <script src="{% static "polls/js/jquery.nicescroll.js" type="text/javascript" %}"></script>
+    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript" ></script>
     <!-- jquery knob -->
     {% load static %}
     <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
