--- a/polls/templates/polls/reservation.html
+++ b/polls/templates/polls/reservation.html
@@ -16,11 +16,10 @@
     <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
     <link rel="shortcut icon" href="img/favicon.png">
 
-    <title>Basic Table | Creative - Bootstrap 3 Responsive Admin Template</title>
+    <title>Form Component | Creative - Bootstrap 3 Responsive Admin Template</title>
 
     <!-- Bootstrap CSS -->
-
-     {% load static %}
+    {% load static %}
     <link href="{% static "polls/css/bootstrap.min.css" %}" rel="stylesheet">
     <!-- bootstrap theme -->
     {% load static %}
@@ -37,16 +36,16 @@
     {% load static %}
     <link href="{% static "polls/css/style-responsive.css" %}" rel="stylesheet" />
 
-
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 -->
     <!--[if lt IE 9]>
       <script src="js/html5shiv.js"></script>
       <script src="js/respond.min.js"></script>
       <script src="js/lte-ie7.js"></script>
     <![endif]-->
-  </head>
 
+  </head>
   <body>
+
   <!-- container section start -->
   <section id="container" class="">
       <!--header start-->
@@ -313,7 +312,7 @@
       <!--header end-->
 
       <!--sidebar start-->
-     <aside>
+      <aside>
           <div id="sidebar"  class="nav-collapse ">
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
@@ -366,202 +365,127 @@
               <!-- sidebar menu end-->
           </div>
       </aside>
-              <!-- sidebar menu end-->
-          </div>
-      </aside>
+      <!--sidebar end-->
 
       <!--main content start-->
       <section id="main-content">
           <section class="wrapper">
 		  <div class="row">
 				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-table"></i> Table</h3>
+					<h3 class="page-header"><i class="fa fa-file-text-o"></i> Form elements</h3>
 					<ol class="breadcrumb">
 						<li><i class="fa fa-home"></i><a href="index.html">Home</a></li>
-						<li><i class="fa fa-table"></i>Table</li>
-						<li><i class="fa fa-th-list"></i>Basic Table</li>
+						<li><i class="icon_document_alt"></i>Forms</li>
+						<li><i class="fa fa-file-text-o"></i>Form elements</li>
 					</ol>
 				</div>
 			</div>
-              <!-- page start-->
-
               <div class="row">
                   <div class="col-lg-12">
+                     ///from here
+                      {% if hasreserve == '0' %}
                       <section class="panel">
-                          <header class="panel-heading">
-                              Advanced Table
-                          </header>
+                          <div class="panel-body">
+                              <form class="form-horizontal " method="get">
+                                  <div class="form-group">
+                                      <label class="control-label col-lg-2" for="inputSuccess">Choose a Facility</label>
+                                      <div class="col-lg-10">
 
-                          <table class="table table-striped table-advance table-hover">
-                           <tbody>
-                              <tr>
-                                 <th><i class="icon_profile"></i> Bill Type </th>
-                                 <th><i class="icon_calendar"></i> Date</th>
-                                 <th><i class="icon_mail_alt"></i> Value </th>
-                                 <th><i class="icon_pin_alt"></i> Is payed</th>
-                                 <th><i class="icon_mobile"></i> Mobile </th>
-                                 <th><i class="icon_cogs"></i> Action</th>
-                              </tr>
-                              <tr>
-                                 <td>Angeline Mcclain</td>
-                                 <td>2004-07-06</td>
-                                 <td>dale@chief.info</td>
-                                 <td>Rosser</td>
-                                 <td>176-026-5992</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
+                                          <div class="radio">
+                                              <label>
+                                                  <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                                                  Pool
+                                              </label>
+                                          </div>
+                                          <div class="radio">
+                                              <label>
+                                                  <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                                                  Gym
+                                              </label>
+                                          </div>
+
+                                      </div>
                                   </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Sung Carlson</td>
-                                 <td>2011-01-10</td>
-                                 <td>ione.gisela@high.org</td>
-                                 <td>Robert Lee</td>
-                                 <td>724-639-4784</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
+                                  <div class="form-group">
+                                      <label class="control-label col-lg-2" for="inputSuccess">Options</label>
+                                      <div class="col-lg-10">
+                                          <label class="checkbox-inline">
+                                              <input type="checkbox" id="inlineCheckbox1" value="option1"> 1
+                                          </label>
+                                          <label class="checkbox-inline">
+                                              <input type="checkbox" id="inlineCheckbox2" value="option2"> 2
+                                          </label>
+                                          <label class="checkbox-inline">
+                                              <input type="checkbox" id="inlineCheckbox3" value="option3"> 3
+                                          </label>
+
+                                      </div>
                                   </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Bryon Osborne</td>
-                                 <td>2006-10-29</td>
-                                 <td>sol.raleigh@language.edu</td>
-                                 <td>York</td>
-                                 <td>180-456-0056</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
+                                  <div class="form-group">
+                                      <label class="control-label col-lg-2" for="inputSuccess">Week Days</label>
+                                      <div class="col-lg-10">
+                                          <select class="form-control m-bot15">
+                                              <option>Saturday</option>
+                                              <option>Sunday</option>
+                                              <option>Monday</option>
+                                              <option>Tuesday</option>
+                                              <option>Wednesday</option>
+                                              <option>Thirsday</option>
+                                              <option>Friday</option>
+                                          </select>
+
+                                          <select multiple class="form-control">
+                                              <option>9-11</option>
+                                              <option>11-1</option>
+                                              <option>1-3</option>
+                                              <option>3-5</option>
+                                              <option>5-7</option>
+                                              <option>7-9</option>
+                                              <option>9-12</option>
+                                          </select>
+                                      </div>
                                   </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Dalia Marquez</td>
-                                 <td>2011-12-15</td>
-                                 <td>angeline.frieda@thick.com</td>
-                                 <td>Alton</td>
-                                 <td>690-601-1922</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Selina Fitzgerald</td>
-                                 <td>2003-01-06</td>
-                                 <td>moshe.mikel@parcelpart.info</td>
-                                 <td>Waelder</td>
-                                 <td>922-810-0915</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Abraham Avery</td>
-                                 <td>2006-07-14</td>
-                                 <td>harvey.jared@pullpump.org</td>
-                                 <td>Harker Heights</td>
-                                 <td>511-175-7115</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Caren Mcdowell</td>
-                                 <td>2002-03-29</td>
-                                 <td>valeria@hookhope.org</td>
-                                 <td>Blackwell</td>
-                                 <td>970-147-5550</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Owen Bingham</td>
-                                 <td>2013-04-06</td>
-                                 <td>thomas.christopher@firstfish.info</td>
-                                 <td>Rule</td>
-                                 <td>934-118-6046</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Ahmed Dean</td>
-                                 <td>2008-03-19</td>
-                                 <td>lakesha.geri.allene@recordred.com</td>
-                                 <td>Darrouzett</td>
-                                 <td>338-081-8817</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Mario Norris</td>
-                                 <td>2010-02-08</td>
-                                 <td>mildred@hour.info</td>
-                                 <td>Amarillo</td>
-                                 <td>945-547-5302</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                           </tbody>
-                        </table>
+                                <button type="submit" class="btn btn-primary"> Reserve </button>
+
+                              </form>
+
+                              ///end of form
+                          </div>
                       </section>
+
+                      {% else %}
+                       <div class="col-lg-3 col-md-3 col-sm-12 col-xs-12">
+					         <div class="info-box green-bg">
+						         <i class="fa fa-cubes"></i>
+						        <div class="count">Pool</div>
+						        <div class="title">Monday</div>
+                                <div class="title">9-11</div>
+					         </div><!--/.info-box-->
+                            <a href="#myModal-2" data-toggle="modal" class="btn  btn-danger">
+                                  Cancel
+                              </a>
+				        </div>
+                      {%  endif %}
+
                   </div>
               </div>
+              <!-- Basic Forms & Horizontal Forms-->
+
               <!-- page end-->
           </section>
       </section>
       <!--main content end-->
       <div class="text-right">
-            <div class="credits">
-                <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
-                -->
-                <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-            </div>
+        <div class="credits">
+            <!--
+                All the links in the footer should remain intact.
+                You can delete the links only if you purchased the pro version.
+                Licensing information: https://bootstrapmade.com/license/
+                Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
+            -->
+
         </div>
+    </div>
   </section>
   <!-- container section end -->
     <!-- javascripts -->
@@ -573,8 +497,7 @@
     {% load static %}
     <script src="{% static "polls/js/jquery.scrollTo.min.js" %}"></script>
     {% load static %}
-    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript"></script>
-    <!-- jquery knob -->
+    <script src="{% static "polls/js/jquery.nicescroll.js" %}" type="text/javascript" ></script>
     {% load static %}
     <script src="{% static "polls/assets/jquery-knob/js/jquery.knob.js" %}"></script>
     <!--custome script for all page-->
@@ -582,9 +505,32 @@
     <script src="{% static "polls/js/scripts.js" %}"></script>
 
 
+    <!-- jquery ui -->
+    <script src="js/jquery-ui-1.9.2.custom.min.js"></script>
+
+    <!--custom checkbox & radio-->
+    <script type="text/javascript" src="js/ga.js"></script>
+    <!--custom switch-->
+    <script src="js/bootstrap-switch.js"></script>
+    <!--custom tagsinput-->
+    <script src="js/jquery.tagsinput.js"></script>
+
+    <!-- colorpicker -->
+
+    <!-- bootstrap-wysiwyg -->
+    <script src="js/jquery.hotkeys.js"></script>
+    <script src="js/bootstrap-wysiwyg.js"></script>
+    <script src="js/bootstrap-wysiwyg-custom.js"></script>
+    <!-- ck editor -->
+    <script type="text/javascript" src="assets/ckeditor/ckeditor.js"></script>
+    <!-- custom form component script for this page-->
+    <script src="js/form-component.js"></script>
+    <!-- custome script for all page -->
+    <script src="js/scripts.js"></script>
+
+
   </body>
 </html>
-
 
 
 </body>
