--- a/polls/templates/polls/reservation.html
+++ b/polls/templates/polls/reservation.html
@@ -55,7 +55,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+            <a href="index.html" class="logo">Abnie<span class="lite">Gostar</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -373,7 +373,7 @@
           <section class="wrapper">
 		  <div class="row">
 				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-file-text-o"></i> Form elements</h3>
+
 					<ol class="breadcrumb">
 						<li><i class="fa fa-home"></i><a href="{%  url 'index' 10%}">Home</a></li>
 					</ol>
