--- a/polls/templates/polls/financial.html
+++ b/polls/templates/polls/financial.html
@@ -56,7 +56,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+            <a href="index.html" class="logo">Abnie<span class="lite">Gostar</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -376,7 +376,7 @@
           <section class="wrapper">
 		  <div class="row">
 				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-table"></i> Table</h3>
+
                     //here is bread
 					<ol class="breadcrumb">
 						<li><i class="fa fa-home"></i><a href="{%  url 'index' 10%}">Home</a></li>
