--- a/polls/templates/polls/guest.html
+++ b/polls/templates/polls/guest.html
@@ -73,7 +73,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+            <a href="index.html" class="logo">Abnie<span class="lite">Gostar</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -464,13 +464,13 @@
           </div>
 
           </div>
-          {% if my_id == '10' %}
+          {% if id == '10' %}
             <center>
             <a class="btn btn-danger btn-lg" style="margin-bottom: 20px;width: 170px" href="" title="Bootstrap 3 themes generator">Delete Profile</a>
             </center>
           {% endif %}
           ////start again
-              {% if my_id == '10' %}
+              {% if id == '10' %}
            <div class="row">
                 <div class="col-lg-12 col-md-12">
 					<div class="panel panel-default">
