--- a/polls/templates/polls/validation.html
+++ b/polls/templates/polls/validation.html
@@ -65,7 +65,7 @@
             </div>
 
             <!--logo start-->
-            <a href="index.html" class="logo">Nice <span class="lite">Admin</span></a>
+            <a href="index.html" class="logo">Abnie<span class="lite">Gostar</span></a>
             <!--logo end-->
 
             <div class="nav search-row" id="top_menu">
@@ -383,7 +383,7 @@
           <section class="wrapper">
 		  <div class="row">
 				<div class="col-lg-12">
-					<h3 class="page-header"><i class="fa fa-files-o"></i> Form Validation</h3>
+
 					<ol class="breadcrumb">
 						<li><i class="fa fa-home"></i><a href="{% url 'index' id %}">Home</a></li>
 					</ol>
@@ -400,38 +400,38 @@
                               <div class="form">
                                   <form class="form-validate form-horizontal" id="feedback_form" method="get" action="">
                                       <div class="form-group ">
-                                          <label for="cname" class="control-label col-lg-2">Full Name <span class="required">*</span></label>
+                                          <label for="cname" class="control-label col-lg-2">Name <span class="required">*</span></label>
                                           <div class="col-lg-10">
                                               <input class="form-control" id="cname" name="fullname" minlength="5" type="text" required />
                                           </div>
                                       </div>
                                       <div class="form-group ">
-                                          <label for="cemail" class="control-label col-lg-2">E-Mail <span class="required">*</span></label>
+                                          <label for="cemail" class="control-label col-lg-2">Family Name <span class="required">*</span></label>
                                           <div class="col-lg-10">
                                               <input class="form-control " id="cemail" type="email" name="email" required />
                                           </div>
                                       </div>
                                       <div class="form-group ">
-                                          <label for="curl" class="control-label col-lg-2">Website</label>
+                                          <label for="curl" class="control-label col-lg-2">Email <span class="required">*</span></label>
                                           <div class="col-lg-10">
                                               <input class="form-control " id="curl" type="url" name="url" />
                                           </div>
                                       </div>
                                       <div class="form-group ">
-                                          <label for="cname" class="control-label col-lg-2">Subject <span class="required">*</span></label>
+                                          <label for="cname" class="control-label col-lg-2">Unser Name <span class="required">*</span></label>
                                           <div class="col-lg-10">
                                               <input class="form-control" id="subject" name="subject" minlength="5" type="text" required />
                                           </div>
                                       </div>
                                       <div class="form-group ">
-                                          <label for="ccomment" class="control-label col-lg-2">Feedback</label>
+                                          <label for="ccomment" class="control-label col-lg-2">Password <span class="required">*</span></label>
                                           <div class="col-lg-10">
                                               <textarea class="form-control " id="ccomment" name="comment" required></textarea>
                                           </div>
                                       </div>
                                       <div class="form-group">
                                           <div class="col-lg-offset-2 col-lg-10">
-                                              <button class="btn btn-primary" type="submit">Sing Up</button>
+                                              <button class="btn btn-primary" type="submit">Add</button>
                                               <button class="btn btn-default" type="button">Cancel</button>
                                           </div>
                                       </div>
