--- a/polls/templates/polls/financial.html
+++ b/polls/templates/polls/financial.html
@@ -295,7 +295,7 @@
                                 <a href="#"><i class="icon_chat_alt"></i> Chats</a>
                             </li>
                             <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                                <a href="../registration/login.html"><i class="icon_key_alt"></i> Log Out</a>
                             </li>
                             <li>
                                 <a href="documentation.html"><i class="icon_key_alt"></i> Documentation</a>
@@ -318,20 +318,20 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
                   <li class="active">
-                      <a class="" href="{%  url 'index' 10%}">
+                      <a class="" href="{%  url 'index' id%}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
                   </li>
 
 				  <li>
-                      <a class="" href="{%  url 'neighbors' 10%}">
+                      <a class="" href="{%  url 'neighbors' id%}">
                           <i class="icon_genius"></i>
                           <span>Neighbors</span>
                       </a>
                   </li>
 
-                  ///added
+
                   <li class="sub-menu">
                       <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
@@ -339,15 +339,15 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="{%  url 'financial' 10 'charge'%}">Charges</a></li>
-                          <li><a class="" href="{%  url 'financial' 10 'bill' %}">Bills</a></li>
-                          <li><a class="" href="{%  url 'financial' 10 'tenant'%}">Tenant</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'charge'%}">Charges</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'bill' %}">Bills</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'tenant'%}">Tenant</a></li>
                       </ul>
                   </li>
-                  ///
+
 
 				  <li>
-                      <a class="" href="{%  url 'reservation' 10 0%}">
+                      <a class="" href="{%  url 'reservation' id 0%}">
                           <i class="icon_genius"></i>
                           <span>Reservations</span>
                       </a>
@@ -355,7 +355,7 @@
 
                   {% if id == '10' %}
 				  <li>
-                      <a class="" href="{%  url 'owner' 10%}">
+                      <a class="" href="{%  url 'owner' id%}">
                           <i class="icon_genius"></i>
                           <span>Owner</span>
                       </a>
@@ -403,146 +403,55 @@
                                  <th><i class="icon_calendar"></i> Receipt Date </th>
                                  <th><i class="icon_cogs"></i> Pay</th>
                               </tr>
+
+                              {% if type == 'charge' %}
+                              {% for charge in apartment.charge_set.all %}
                               <tr>
-                                 <td>Angeline Mcclain</td>
-                                 <td>2004-07-06</td>
-                                 <td>dale@chief.info</td>
-                                 <td>Rosser</td>
-                                 <td>176-026-5992</td>
+                                 <td>Casual</td>
+                                 <td>{{ charge.due_date }}</td>
+                                 <td>{{ charge.price }}</td>
+                                 <td>{{ charge.is_payed }}</td>
+                                 <td>{{ charge.receipt.date }}</td>
                                  <td>
                                   <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
+                                        {% if charge.is_payed == False %}
+                                      <a class="btn btn-primary" href="{% url "pay" id type forloop.counter %}"><i class="icon_plus_alt2"></i></a>
+                                        {% endif %}
+                                      {% if charge.is_payed == True %}
                                       <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
+                                      {% endif %}
                                       <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
                                   </div>
                                   </td>
                               </tr>
+                           {% endfor %}
+                           {% endif %}
+
+                            {% if type == 'bill' %}
+                              {% for bill in apartment.bill_set.all %}
                               <tr>
-                                 <td>Sung Carlson</td>
-                                 <td>2011-01-10</td>
-                                 <td>ione.gisela@high.org</td>
-                                 <td>Robert Lee</td>
-                                 <td>724-639-4784</td>
+                                 <td>Casual</td>
+                                 <td>{{ bill.due_date }}</td>
+                                 <td>{{ bill.price }}</td>
+                                 <td>{{ bill.is_payed }}</td>
+                                 <td>{{ bill.receipt.date }}</td>
                                  <td>
                                   <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
+                                        {% if bill.is_payed == False %}
+                                      <a class="btn btn-primary" href="{% url "pay" id type forloop.counter %}"><i class="icon_plus_alt2"></i></a>
+                                        {% endif %}
+                                      {% if bill.is_payed == True %}
                                       <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
+                                      {% endif %}
                                       <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
                                   </div>
                                   </td>
                               </tr>
-                              <tr>
-                                 <td>Bryon Osborne</td>
-                                 <td>2006-10-29</td>
-                                 <td>sol.raleigh@language.edu</td>
-                                 <td>York</td>
-                                 <td>180-456-0056</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Dalia Marquez</td>
-                                 <td>2011-12-15</td>
-                                 <td>angeline.frieda@thick.com</td>
-                                 <td>Alton</td>
-                                 <td>690-601-1922</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Selina Fitzgerald</td>
-                                 <td>2003-01-06</td>
-                                 <td>moshe.mikel@parcelpart.info</td>
-                                 <td>Waelder</td>
-                                 <td>922-810-0915</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Abraham Avery</td>
-                                 <td>2006-07-14</td>
-                                 <td>harvey.jared@pullpump.org</td>
-                                 <td>Harker Heights</td>
-                                 <td>511-175-7115</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Caren Mcdowell</td>
-                                 <td>2002-03-29</td>
-                                 <td>valeria@hookhope.org</td>
-                                 <td>Blackwell</td>
-                                 <td>970-147-5550</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Owen Bingham</td>
-                                 <td>2013-04-06</td>
-                                 <td>thomas.christopher@firstfish.info</td>
-                                 <td>Rule</td>
-                                 <td>934-118-6046</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Ahmed Dean</td>
-                                 <td>2008-03-19</td>
-                                 <td>lakesha.geri.allene@recordred.com</td>
-                                 <td>Darrouzett</td>
-                                 <td>338-081-8817</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
-                              <tr>
-                                 <td>Mario Norris</td>
-                                 <td>2010-02-08</td>
-                                 <td>mildred@hour.info</td>
-                                 <td>Amarillo</td>
-                                 <td>945-547-5302</td>
-                                 <td>
-                                  <div class="btn-group">
-                                      <a class="btn btn-primary" href="#"><i class="icon_plus_alt2"></i></a>
-                                      <a class="btn btn-success" href="#"><i class="icon_check_alt2"></i></a>
-                                      <a class="btn btn-danger" href="#"><i class="icon_close_alt2"></i></a>
-                                  </div>
-                                  </td>
-                              </tr>
+                           {% endfor %}
+                           {% endif %}
+
+
+
                            </tbody>
                         </table>
                       </section>
@@ -560,7 +469,7 @@
                     Licensing information: https://bootstrapmade.com/license/
                     Purchase the pro version form: https://bootstrapmade.com/buy/?theme=NiceAdmin
                 -->
-                <a href="https://bootstrapmade.com/free-business-bootstrap-themes-website-templates/">Business Bootstrap Themes</a> by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+
             </div>
         </div>
   </section>
