--- a/polls/templates/polls/guest.html
+++ b/polls/templates/polls/guest.html
@@ -312,7 +312,7 @@
                                 <a href="#"><i class="icon_chat_alt"></i> Chats</a>
                             </li>
                             <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                                <a href="../registration/login.html"><i class="icon_key_alt"></i> Log Out</a>
                             </li>
                             <li>
                                 <a href="documentation.html"><i class="icon_key_alt"></i> Documentation</a>
@@ -335,20 +335,20 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
                   <li class="active">
-                      <a class="" href="{%  url 'index' 10%}">
+                      <a class="" href="{%  url 'index' id%}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
                   </li>
 
 				  <li>
-                      <a class="" href="{%  url 'neighbors' 10%}">
+                      <a class="" href="{%  url 'neighbors' id%}">
                           <i class="icon_genius"></i>
                           <span>Neighbors</span>
                       </a>
                   </li>
 
-                  ///added
+
                   <li class="sub-menu">
                       <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
@@ -356,15 +356,15 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="{%  url 'financial' 10 'charge'%}">Charges</a></li>
-                          <li><a class="" href="{%  url 'financial' 10 'bill' %}">Bills</a></li>
-                          <li><a class="" href="{%  url 'financial' 10 'tenant'%}">Tenant</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'charge'%}">Charges</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'bill' %}">Bills</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'tenant'%}">Tenant</a></li>
                       </ul>
                   </li>
-                  ///
+
 
 				  <li>
-                      <a class="" href="{%  url 'reservation' 10 0%}">
+                      <a class="" href="{%  url 'reservation' id 0%}">
                           <i class="icon_genius"></i>
                           <span>Reservations</span>
                       </a>
@@ -372,7 +372,7 @@
 
                   {% if id == '10' %}
 				  <li>
-                      <a class="" href="{%  url 'owner' 10%}">
+                      <a class="" href="{%  url 'owner' id%}">
                           <i class="icon_genius"></i>
                           <span>Owner</span>
                       </a>
@@ -411,36 +411,39 @@
 
                     <div class="form quick-post">
                                     <!-- Edit profile form (not working)-->
-                                    <form class="form-horizontal">
+                                    <form class="form-horizontal" , action="{% url 'guest_request' id guest_id%}" method="post">
+                                        {% csrf_token %}
                                         <!-- Title -->
                                         <div class="form-group">
                                           <label class="control-label col-lg-2" for="title">Title</label>
                                           <div class="col-lg-10">
-                                            <input type="text" class="form-control" id="title">
+                                            <input type="text" class="form-control"  name = "title"  id="title" value="goog">
                                           </div>
                                         </div>
                                         <!-- Content -->
+                                        {% csrf_token %}
                                         <div class="form-group">
                                           <label class="control-label col-lg-2" for="content">Content</label>
                                           <div class="col-lg-10">
-                                            <textarea class="form-control" id="content"></textarea>
+                                            <textarea class="form-control" name = "content"  id="content"></textarea>
                                           </div>
                                         </div>
                                         <!-- Cateogry -->
+                                        {% csrf_token %}
                                         <div class="form-group">
                                           <label class="control-label col-lg-2">Category</label>
                                           <div class="col-lg-10">
-                                              <select class="form-control">
+                                              <select class="form-control"  name="category"  id="category">
                                                 <option value="">- Choose Cateogry -</option>
-                                                <option value="1">Warning</option>
-                                                <option value="2">Emergency</option>
-                                                <option value="3">Request</option>
+                                                <option value="request">Request</option>
+                                                <option value="warning">Warning</option>
+                                                <option value="emergancy">Emergancy</option>
                                               </select>
                                           </div>
                                         </div>
                                         <!-- Tags -->
 
-
+                                        {% csrf_token %}
                                         <!-- Buttons -->
                                         <div class="form-group">
                                            <!-- Buttons -->
@@ -464,13 +467,13 @@
           </div>
 
           </div>
-          {% if id == '10' %}
+          {% if is_modir %}
             <center>
             <a class="btn btn-danger btn-lg" style="margin-bottom: 20px;width: 170px" href="" title="Bootstrap 3 themes generator">Delete Profile</a>
             </center>
           {% endif %}
           ////start again
-              {% if id == '10' %}
+              {% if is_modir %}
            <div class="row">
                 <div class="col-lg-12 col-md-12">
 					<div class="panel panel-default">
