--- a/polls/templates/polls/neighbors.html
+++ b/polls/templates/polls/neighbors.html
@@ -301,7 +301,7 @@
                                 <a href="#"><i class="icon_chat_alt"></i> Chats</a>
                             </li>
                             <li>
-                                <a href="login.html"><i class="icon_key_alt"></i> Log Out</a>
+                                <a href="../registration/login.html"><i class="icon_key_alt"></i> Log Out</a>
                             </li>
                             <li>
                                 <a href="documentation.html"><i class="icon_key_alt"></i> Documentation</a>
@@ -319,25 +319,25 @@
       <!--header end-->
 
       <!--sidebar start-->
-     <aside>
+      <aside>
           <div id="sidebar"  class="nav-collapse ">
               <!-- sidebar menu start-->
               <ul class="sidebar-menu">
                   <li class="active">
-                      <a class="" href="{%  url 'index' 10%}">
+                      <a class="" href="{%  url 'index' id%}">
                           <i class="icon_house_alt"></i>
                           <span>Dashboard</span>
                       </a>
                   </li>
 
 				  <li>
-                      <a class="" href="{%  url 'neighbors' 10%}">
+                      <a class="" href="{%  url 'neighbors' id%}">
                           <i class="icon_genius"></i>
                           <span>Neighbors</span>
                       </a>
                   </li>
 
-                  ///added
+
                   <li class="sub-menu">
                       <a href="javascript:;" class="">
                           <i class="icon_document_alt"></i>
@@ -345,15 +345,15 @@
                           <span class="menu-arrow arrow_carrot-right"></span>
                       </a>
                       <ul class="sub">
-                          <li><a class="" href="{%  url 'financial' 10 'charge'%}">Charges</a></li>
-                          <li><a class="" href="{%  url 'financial' 10 'bill' %}">Bills</a></li>
-                          <li><a class="" href="{%  url 'financial' 10 'tenant'%}">Tenant</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'charge'%}">Charges</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'bill' %}">Bills</a></li>
+                          <li><a class="" href="{%  url 'financial' id 'tenant'%}">Tenant</a></li>
                       </ul>
                   </li>
-                  ///
+
 
 				  <li>
-                      <a class="" href="{%  url 'reservation' 10 0%}">
+                      <a class="" href="{%  url 'reservation' id 0%}">
                           <i class="icon_genius"></i>
                           <span>Reservations</span>
                       </a>
@@ -361,7 +361,7 @@
 
                   {% if id == '10' %}
 				  <li>
-                      <a class="" href="{%  url 'owner' 10%}">
+                      <a class="" href="{%  url 'owner' id%}">
                           <i class="icon_genius"></i>
                           <span>Owner</span>
                       </a>
@@ -400,16 +400,11 @@
 
 
                           <div class="list-group">
-                              <a class="list-group-item " href="#">
-                                  Ali Gatmiry
-                              </a>
-                              <a class="list-group-item active" href="{% url "guest" 10 20%}">Morteza Aghajani</a>
-                              <a class="list-group-item" href="javascript:;">Meysam Aghamohammadi</a>
-                              <a class="list-group-item" href="javascript:;">Amir Karimi</a>
-                              <a class="list-group-item" href="javascript:;">Arezoo Golestani</a>
-                              <a class="list-group-item" href="javascript:;">Fateme kalantari</a>
-                              {% if id == '10' %}
-                                <a class="btn btn-success" style="width: 100%; height: 40px" data-toggle="modal" href="{% url "validation" 10%}">
+                              {% for neighbor in Neighbor.all %}
+                              <a class="list-group-item" href="{% url "guest" id neighbor.national_id%}">{{ neighbor.neighbor_name }}</a>
+                                {% endfor %}
+                              {% if is_modir %}
+                                <a class="btn btn-success" style="width: 100%; height: 40px" data-toggle="modal" href="{% url "validation" id%}">
                                               Add Neighbor
                                            </a>
                               {% endif %}
@@ -431,18 +426,13 @@
                               Messages
                           </header>
                           <div class="list-group">
+                              {% for message in Messages.all %}
                               <a class="list-group-item " href="javascript:;">
-                                  <h4 class="list-group-item-heading">Ali Gatmiry</h4>
-                                  <p class="list-group-item-text">motalee.</p>
+                                  <h4 class="list-group-item-heading">{{ message.sender.neighbor_family_name }}</h4>
+                                  <p class="list-group-item-text">{{ message.title }}</p>
                               </a>
-                              <a class="list-group-item active" href="javascript:;">
-                                  <h4 class="list-group-item-heading">Arezoo Kalantari</h4>
-                                  <p class="list-group-item-text">Ghabz ha</p>
-                              </a>
-                              <a class="list-group-item" href="javascript:;">
-                                  <h4 class="list-group-item-heading">Ali Gatmiri</h4>
-                                  <p class="list-group-item-text">Asr</p>
-                              </a>
+                              {% endfor %}
+
                           </div>
                       </section>
                   </div>
